# k8s-gui

./: .dockerignore  .eslintrc.cjs  .gitignore  .gitmodules  .npmrc  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.linux-build  LICENSE  Makefile  README.md  SECURITY.md  build.py  docker-compose.windows.yml  eslint.config.js  index.html  lefthook.yml  mise.toml  orval.config.cjs  package-lock.json  package.json  tailwind.config.js  tauri-codegen.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  codeql.yml  release.yml
auth-server/: .gitignore  Cargo.toml  Dockerfile  README.md  auth-openapi.json  build.rs
auth-server/migration/: Cargo.toml
auth-server/migration/src/: lib.rs  m20250308_000001_init.rs
auth-server/migrations/: 001_create_users.sql  002_create_user_profiles.sql  003_create_licenses.sql  004_create_payments.sql  005_create_refresh_tokens.sql  006_create_audit_logs.sql  007_create_indexes.sql  008_create_password_reset_tokens.sql
auth-server/proto/: auth.proto  license.proto  payment.proto  user.proto
auth-server/src/: config.rs  error.rs  main.rs  openapi.rs  tasks.rs
auth-server/src/db/: mod.rs
auth-server/src/db/entities/: extensions.rs  mod.rs
auth-server/src/db/models/: audit_log.rs  license.rs  mod.rs  payment.rs  token.rs  user.rs
auth-server/src/db/repositories/: licenses.rs  mod.rs  payments.rs  refresh_tokens.rs  user_profiles.rs  users.rs
auth-server/src/grpc/: auth.rs  license.rs  mod.rs  payment.rs  user.rs
auth-server/src/handlers/: auth.rs  license.rs  mod.rs  payment.rs  user.rs
auth-server/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  security.rs
auth-server/src/proto/: auth.rs  license.rs  mod.rs  payment.rs  user.rs
auth-server/src/rest/: mod.rs
auth-server/src/services/: admin.rs  auth.rs  license.rs  mod.rs  payment.rs  user.rs
auth-server/src/utils/: jwt.rs  mod.rs  password.rs  rate_limit.rs  validation.rs
docs/plans/: 2026-01-13-code-unification-and-ux-improvements.md  2026-01-13-kubectl-debug-refactoring-design.md  2026-01-13-kubectl-debug-refactoring.md  2026-01-13-log-viewer-implementation.md  2026-01-13-log-viewer-redesign.md  2026-01-13-ux-improvements-design.md  2026-01-14-network-redesign-design.md  2026-01-14-network-redesign.md  2026-01-14-secrets-configmaps-redesign-design.md  2026-01-14-secrets-configmaps-redesign.md  2026-01-15-metrics-unification-design.md  2026-01-15-metrics-unification.md  (+2 more)
k8s-gui-common/: Cargo.toml
k8s-gui-common/src/: datetime.rs  dto.rs  error.rs  lib.rs  tracing.rs  validation.rs
scripts/: gen_icon.py
src/: App.tsx  index.css  main.tsx  test-setup.smoke.test.tsx  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  shell.rs  state.rs  validation.rs
src-tauri/src/auth/: auth_client_hooks.rs  aws_eks.rs  azure_aks.rs  bearer.rs  credentials.rs  gcp_gke.rs  generated_client.rs  interactive.rs  kubeconfig.rs  license_client.rs  manager.rs  mod.rs  oidc.rs
src-tauri/src/auth/interactive/: cloud.rs  cred.rs  exec.rs  mod.rs  oidc.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/cli/: cloud.rs  helm.rs  kubectl.rs  mod.rs  paths.rs  plugins.rs  tool.rs
src-tauri/src/client/: context.rs  mod.rs  resource_client.rs
src-tauri/src/commands/: auth.rs  cluster.rs  config_resources.rs  crds.rs  debug.rs  deployments.rs  events.rs  filters.rs  helm.rs  helpers.rs  kubectl.rs  license.rs  logging.rs  logs.rs  manifest.rs  metrics.rs  mod.rs  namespace.rs  network.rs  nodes.rs  plugins.rs  pods.rs  port_forward.rs  registry.rs  resources.rs  services.rs  settings.rs  stats.rs  storage.rs  terminal.rs  validation.rs  watch.rs  workloads.rs
src-tauri/src/commands/config_resources/: configmap.rs  mod.rs  references.rs  secret.rs
src-tauri/src/commands/crds/: convert.rs  crd.rs  instance.rs  mod.rs  types.rs
src-tauri/src/commands/debug/: create.rs  manage.rs  mod.rs  status.rs  types.rs
src-tauri/src/commands/helm/: cli.rs  manager.rs  mod.rs  secret.rs  types.rs
src-tauri/src/commands/helpers/: cluster.rs  context.rs  mod.rs  namespaced.rs  params.rs  yaml.rs
src-tauri/src/commands/manifest/: commands.rs  mod.rs  parse.rs
src-tauri/src/commands/port_forward/: config.rs  mod.rs  session.rs  types.rs
src-tauri/src/commands/registry/: auth.rs  mod.rs  search.rs  types.rs
src-tauri/src/commands/settings/: cloud.rs  helpers.rs  mod.rs  prefs.rs  registry.rs
src-tauri/src/config/: app.rs  cloud.rs  connection.rs  editor.rs  mod.rs
src-tauri/src/logs/: config.rs  filter.rs  mod.rs  parser.rs  streamer.rs  types.rs
src-tauri/src/metrics/: helpers.rs  mod.rs  parse.rs  types.rs
src-tauri/src/middleware/: license_check.rs  mod.rs
src-tauri/src/plugins/: helm.rs  kubectl.rs  manager.rs  mod.rs  traits.rs
src-tauri/src/proto/: auth.rs  license.rs  mod.rs  payment.rs  user.rs
src-tauri/src/resources/: mod.rs  network.rs  resource_types.rs  serialization.rs  storage.rs  types.rs  watcher.rs  workloads.rs
src-tauri/src/resources/types/: common.rs  deployment.rs  metadata.rs  mod.rs  node.rs  pod.rs  service.rs
src-tauri/src/resources/workloads/: cronjob.rs  daemonset.rs  job.rs  mod.rs  statefulset.rs
src-tauri/src/shell/: command.rs  mod.rs  path.rs
src-tauri/src/state/: events.rs  mod.rs  sessions.rs
src-tauri/src/terminal/: adapter.rs  manager.rs  mod.rs  session.rs
src-tauri/src/terminal/adapters/: auth_exec.rs  local_process.rs  mod.rs  pod_exec.rs
src-tauri/src/utils/: mod.rs  quantities.rs
src-tauri/src/watch/: event.rs  failure.rs  mod.rs  session.rs
src/contexts/: error-context.tsx
test-manifests/: README.md  comprehensive-test.yaml  crd-resources-test.yaml  crds-traefik-istio.yaml  helm-test.sh  k8s-gui-all.yaml  k8s-gui-crds.yaml
windows-builder/: install.bat
xtask/: Cargo.toml
xtask/src/: main.rs
(+302 files in other folders)
