[package]
name = "k8s-gui"
version = "2.0.1"
edition = "2021"
rust-version = "1.91"
authors = ["K8s GUI Team"]
description = "A minimalist Kubernetes GUI client inspired by Lens"
license = "MIT"

[lib]
name = "k8s_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "k8s-gui"
path = "src/main.rs"

[dependencies]
# Tauri
tauri = { version = "2.1", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Kubernetes
kube = { version = "0.97", default-features = false, features = ["client", "config", "runtime", "ws", "oauth", "oidc", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }

# AWS EKS authentication
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
aws-sdk-sts = "1.51"
aws-sdk-eks = "1.57"
aws-sigv4 = "1.2"

# GCP GKE authentication
gcp_auth = "0.12"

# Azure AKS authentication
azure_identity = "0.21"
azure_core = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = "0.1"
http = "1.2"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# WebSocket for exec
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Security
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
secrecy = "0.10"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Common utilities
k8s-gui-common = { path = "../k8s-gui-common" }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
dirs = "5.0"
config = "0.14"
toml = "0.8"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2.5"
regex = "1.11"
parking_lot = "0.12"
dashmap = "6.1"
once_cell = "1.20"
bytes = "1.9"
rand = "0.9"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["io", "compat"] }
urlencoding = "2.1"
flate2 = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
